--- a/assets/pages/page-two.html
+++ b/assets/pages/page-two.html
@@ -28,7 +28,7 @@
     </ul>
   </div>
   <audio id="myAudio_2" autoplay loop>
-    <source src="../../assets/sounds/icon.mp3" type="audio/mpeg">
+    <source src="../../assets/sounds/Icon.mp3" type="audio/mpeg">
     </audio>
 </body>
 <script src="http://code.jquery.com/jquery-1.11.3.min.js"> </script>
