--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
     <source src="assets/sounds/batman.mp3" type="audio/mpeg">
     </audio>
 </body>
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"> </script>
-  <script src="http://threejs.org/build/three.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.3.min.js"> </script>
+  <script src="https://threejs.org/build/three.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="../dist/js/animsition.min.js"></script>
   <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/script_three.js"></script>
-  <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+  <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
 </html>
