--- a/assets/pages/page-two.html
+++ b/assets/pages/page-two.html
@@ -18,8 +18,8 @@
   <div class='bottom'>
     <ul class="navvy">
       <li class="inline-block" id="music_li_2">Music</li>
-      <img class="inline-block" id="music" src="../../assets/img/music.png">
-      <img class="inline-block" id="music_off" src="../../assets/img/music_off.png">
+      <img class="inline-block" class="music-click" id="music" src="../../assets/img/music.png">
+      <img class="inline-block" class="music-click" id="music_off" src="../../assets/img/music_off.png">
     </ul>
     <ul class="contact">
       <img id="twitter_light_2" src="../../assets/img/twitter_white.jpg">
@@ -31,8 +31,8 @@
     <source src="../../assets/sounds/Icon.mp3" type="audio/mpeg">
     </audio>
 </body>
-<script src="http://code.jquery.com/jquery-1.11.3.min.js"> </script>
-<script src="http://threejs.org/build/three.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.11.3.min.js"> </script>
+<script src="https://threejs.org/build/three.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="../dist/js/animsition.min.js"></script>
