--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <div class='bottom'>
     <ul class="navvy">
       <li class="inline-block" id="music_li">Music</li>
-      <img class="inline-block" id="music" src="assets/img/music.png">
-      <img class="inline-block" id="music_off" src="assets/img/music_off.png">
+      <img class="inline-block" class="music-click" id="music" src="assets/img/music.png">
+      <img class="inline-block" class="music-click" id="music_off" src="assets/img/music_off.png">
       <li class="inline-block" id="speech_li">Speech</li>
-      <img class="inline-block" id="music_1" src="assets/img/music.png">
-      <img class="inline-block" id="music_2_off" src="assets/img/music_off.png">
+      <img class="inline-block" class="speech-click" id="music_1" src="assets/img/music.png">
+      <img class="inline-block" class="speech-click" id="music_2_off" src="assets/img/music_off.png">
     </ul>
     <ul class="contact">
       <img id="twitter_light" src="assets/img/twitter_white.jpg">
@@ -40,12 +40,12 @@
     <source src="assets/sounds/batman.mp3" type="audio/mpeg">
     </audio>
 </body>
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"> </script>
-  <script src="http://threejs.org/build/three.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.3.min.js"> </script>
+  <script src="https://threejs.org/build/three.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="../dist/js/animsition.min.js"></script>
   <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/script_three.js"></script>
-  <script src="http://code.responsivevoice.org/responsivevoice.js"></script>
+  <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
 </html>
