--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <div class='bottom'>
     <ul class="navvy">
       <li class="inline-block" id="music_li">Music</li>
-      <img class="inline-block" class="music-click" id="music" src="assets/img/music.png">
-      <img class="inline-block" class="music-click" id="music_off" src="assets/img/music_off.png">
+      <img class="inline-block" id="music" src="assets/img/music.png">
+      <img class="inline-block" id="music_off" src="assets/img/music_off.png">
       <li class="inline-block" id="speech_li">Speech</li>
-      <img class="inline-block" class="speech-click" id="music_1" src="assets/img/music.png">
-      <img class="inline-block" class="speech-click" id="music_2_off" src="assets/img/music_off.png">
+      <img class="inline-block" id="music_1" src="assets/img/music.png">
+      <img class="inline-block" id="music_2_off" src="assets/img/music_off.png">
     </ul>
     <ul class="contact">
       <img id="twitter_light" src="assets/img/twitter_white.jpg">
