--- a/assets/pages/page-two.html
+++ b/assets/pages/page-two.html
@@ -18,8 +18,8 @@
   <div class='bottom'>
     <ul class="navvy">
       <li class="inline-block" id="music_li_2">Music</li>
-      <img class="inline-block" class="music-click" id="music" src="../../assets/img/music.png">
-      <img class="inline-block" class="music-click" id="music_off" src="../../assets/img/music_off.png">
+      <img class="inline-block" id="music" src="../../assets/img/music.png">
+      <img class="inline-block" id="music_off" src="../../assets/img/music_off.png">
     </ul>
     <ul class="contact">
       <img id="twitter_light_2" src="../../assets/img/twitter_white.jpg">
