--- a/assets/pages/page-two.html
+++ b/assets/pages/page-two.html
@@ -2,6 +2,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="../../assets/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600" rel="stylesheet">
+  <link rel="stylesheet" href="animations.css">
   <title>Final Project</title>
 </head>
 <body class="page-two">
