--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"> </script>
   <script src="https://threejs.org/build/three.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <!-- <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> -->
   <script src="assets/js/script.js"></script>
   <script src="assets/js/script_three.js"></script>
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
