--- a/assets/pages/page-two.html
+++ b/assets/pages/page-two.html
@@ -17,9 +17,15 @@
   </div>
   <div class='bottom'>
     <ul class="navvy">
+      <a href="https://twitter.com/TimTazo?lang=en">
       <li class="inline-block" id="music_li_2">Music</li>
+    </a>
+    <a href="https://www.instagram.com/tazo_taka/?hl=en">
       <img class="inline-block" id="music" src="../../assets/img/music.png">
+    </a>
+    <a href="mailto:mptran0101@berkeley.edu">
       <img class="inline-block" id="music_off" src="../../assets/img/music_off.png">
+    </a>
     </ul>
     <ul class="contact">
       <img id="twitter_light_2" src="../../assets/img/twitter_white.jpg">
