--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,600" rel="stylesheet">
   <!-- <link rel="stylesheet" href="animations.css"> -->
+  <link rel="stylesheet" href="../dist/css/animsition.min.css">
   <title>Final Project</title>
 </head>
 <body class="home-page">
+  <!-- mouse -->
+
+  <!-- other -->
   <div id="loading">
     <div id="loading-wall">
       <img src="assets/img/white-background.jpg">
@@ -15,9 +19,12 @@
       <h1>This is a loading screen and it is a view</h1>
     </div>
   </div>
-  <div class="navbar" class="animsition">
+  <div class="navbar" class="animsition" data-animsition-in-class="fade-in-right-lg"
+  data-animsition-in-duration="1000"
+  data-animsition-out-class="fade-out-right-lg"
+  data-animsition-out-duration="800">
     <a class="active" id="home" href="index.html" class="animsition-link">Home</a>
-    <a id="about" href="assets/pages/page-two.html">About</a>
+    <a id="about" href="assets/pages/page-two.html" class="animsition-link">About</a>
   </div>
   <div id="sequence" class="full-page">
   </div>
@@ -31,9 +38,15 @@
       <img class="inline-block" id="music_2_off" src="assets/img/music_off.png">
     </ul>
     <ul class="contact">
-      <img id="twitter_light" src="assets/img/twitter_white.jpg">
-      <img id="insta_light" src="assets/img/instagram_white.png">
+      <a href="https://twitter.com/TimTazo?lang=en">
+        <img id="twitter_light" src="assets/img/twitter_white.jpg">
+      </a>
+      <a href="https://www.instagram.com/tazo_taka/?hl=en">
+        <img id="insta_light" src="assets/img/instagram_white.png">
+      </a>
+      <a href="mailto:mptran0101@berkeley.edu">
       <img id="mail_light" src="assets/img/mail_white.png">
+    </a>
     </ul>
   </div>
   <audio id="myAudio" loop>
@@ -44,6 +57,7 @@
   <script src="https://threejs.org/build/three.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <!-- <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script> -->
+  <script src="../dist/js/animsition.min.js"></script>
   <script src="assets/js/script.js"></script>
   <script src="assets/js/script_three.js"></script>
   <script src="https://code.responsivevoice.org/responsivevoice.js"></script>
