--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
       <h1>This is a loading screen and it is a view</h1>
     </div>
   </div>
-  <div class="navbar" class="animsition" data-animsition-in-class="fade-in-right-lg"
-  data-animsition-in-duration="1000"
-  data-animsition-out-class="fade-out-right-lg"
-  data-animsition-out-duration="800">
+  <div class="navbar" class="animsition">
     <a class="active" id="home" href="index.html" class="animsition-link">Home</a>
     <a id="about" href="assets/pages/page-two.html" class="animsition-link">About</a>
   </div>
