--- a/assets/pages/page-two.html
+++ b/assets/pages/page-two.html
@@ -33,7 +33,7 @@
     </a>
     </ul>
   </div>
-  <audio id="myAudio_2" autoplay loop>
+  <audio id="myAudio_2" loop>
     <source src="../../assets/sounds/Icon.mp3" type="audio/mpeg">
     </audio>
 </body>
